# itmo-entrance-exam

./: .dockerignore  .env.example  .gitignore  AI_USAGE.md  Dockerfile  README.md  SELF_REVIEW.md  WORKLOG.md  docker-compose.yml  main.py  pyproject.toml
docs/: architecture.md  ml.md  monitoring.md  product.md  risks-and-ops.md
frontend/: app.py
knowledge/: auth.txt  feedback.txt  legal.txt  payments.txt
ml_service/: __init__.py  config.py  embeddings.py  kb.py  main.py  pipeline.py  schemas.py  storage.py  tracing.py
tests/: conftest.py  test_async_migration_contract.py  test_pipeline.py
