[project]
name = "itmo-entrance-exam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.5"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.139.2",
    "langchain>=1.3.14",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "llama-index>=0.14.23",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]
