[project]
name = "itmo-entrance-exam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.5"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.2",
    "langchain-core>=1.4.9",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.3.5",
    "langfuse>=4.14.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.59.2",
    "uvicorn>=0.51.0",
]

[project.optional-dependencies]
e5 = [
    "sentence-transformers>=5.6.0",
    "torch>=2.13.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
